# bareiron

./: .gitignore
include/: crafting.h  globals.h  packets.h  procedures.h  serialize.h
src/: CMakeLists.txt  crafting.c  globals.c  main.c  packets.c  procedures.c  serialize.c  tools.c  worldgen.c
